[yk_html-css-part-1] Create section-1

--- a/classworks/yegor-koren/02_html_css_part_1/index.html
+++ b/classworks/yegor-koren/02_html_css_part_1/index.html
@@ -47,11 +47,16 @@
         <div class="fa fa-home"></div>
       </div>
     </nav>
-    <section class="section" id="intro">
+    <section class="section section1" id="intro">
+        <p>Hi! I'm <span>Prologue</span>, a <span>free</span> responsive site template designed by <span>HTML5 UP</span>.</p>
+        <p>Ligula scelerisque justo sem accumsan diam quis vitae natoque dictum sollicitudin elementum.</p>
+      <form action="" method="get">
+        <input class="section1-button" type="button" name="section1-button" value="Magna Aliquam">
+      </form>
     </section>
-    <section class="section" id="portfolio">
+    <section class="section section2" id="portfolio">
     </section>
-    <section class="section" id="contact">
+    <section class="section section3" id="contact">
     </section>
   </body>
 </html>
