[yk_html-css-part-1] Change contact section

--- a/classworks/yegor-koren/02_html_css_part_1/index.html
+++ b/classworks/yegor-koren/02_html_css_part_1/index.html
@@ -23,19 +23,19 @@
       </a>
       <a href="#portfolio">
         <div class="menu-item">
-          <div class="fa fa-home"></div>
+          <div class="fa fa-th"></div>
           <div><p>Portfolio</p></div>
         </div>
       </a>
       <a href="#intro">
         <div class="menu-item">
-          <div class="fa fa-home"></div>
+          <div class="fa fa-user"></div>
           <div><p>About Me</p></div>
         </div>
       </a>
       <a href="#contact">
         <div class="menu-item">
-          <div class="fa fa-home"></div>
+          <div class="fa fa-envelope"></div>
           <div><p>Contact</p></div>
         </div>
       </a>
@@ -43,20 +43,33 @@
         <div class="fa fa-twitter"></div>
         <div class="fa fa-facebook"></div>
         <div class="fa fa-github"></div>
-        <div class="fa fa-home"></div>
-        <div class="fa fa-home"></div>
+        <div class="fa fa-dribbble"></div>
+        <div class="fa fa-envelope"></div>
       </div>
     </nav>
     <section class="section section1" id="intro">
-        <p>Hi! I'm <span>Prologue</span>, a <span>free</span> responsive site template designed by <span>HTML5 UP</span>.</p>
-        <p>Ligula scelerisque justo sem accumsan diam quis vitae natoque dictum sollicitudin elementum.</p>
+        <p>Hi! I'm <span>Prologue</span>, a <span>free</span> responsive site te
+          mplate designed by <span>HTML5 UP</span>.</p>
+        <p>Ligula scelerisque justo sem accumsan diam quis vitae natoque dictum
+          sollicitudin elementum.</p>
       <form action="" method="get">
-        <input class="section1-button" type="button" name="section1-button" value="Magna Aliquam">
+        <input class="button" type="button" name="section1-button" value="Magna Aliquam">
       </form>
     </section>
     <section class="section section2" id="portfolio">
     </section>
     <section class="section section3" id="contact">
+      <h1>Contact</h1>
+      <p>Elementum sem parturient nulla quam placerat viverra mauris non cim
+        elit tempus ullamcorper dolor. Libero rutrum ut latinia donec curae
+        mus. Eleifend id porttitor acc ultricies lobortis sem nunc ridiculus
+        faucibus a consectetur. Porttitor curae mauris urna mi dolor</p>
+      <form action="" method="get">
+        <input class="form-name" type="text" name="name" value="name">
+        <input class="form-email" type="email" name="email" value="email">
+        <input class="form-message" type="text" name="message" value="message">
+        <input class="button" type="submit" name="section1-button" value="Send Message">
+      </form>
     </section>
   </body>
 </html>
