--- a/classworks/aliona-mozol/02_html/index.html
+++ b/classworks/aliona-mozol/02_html/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<link rel="stylesheet" href="styles/font-awesome.min.css">
   <link rel="stylesheet" href="styles/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300" rel="stylesheet">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
         <img class="sidebar-avatar" src="styles/images/avatar.jpg"/>
         <div class="sidebar-profile-ident">
           <div class="sidebar-profile-name">
-            Aliona Mozol
+            <strong>Aliona Mozol</strong>
           </div>
           <div class="sidebar-profile-profession">
             Full-Stack Developer
@@ -85,17 +86,42 @@
       <header class="content-header">
         Portfolio
       </header>
+      <div class="portfolio-text">
+        Vitae natoque dictum etiam semper magnis enim feugiat convallis
+        convallis egestas rhoncus ridiculus in quis risus amet
+        curabitur tempor orci penatibus. Tellus erat mauris ipsum
+        fermentum etiam vivamus eget. Nunc nibh morbi quis fusce
+        hendrerit lacus ridiculus.
+      </div>
+      <div class="portfolio-all-cards">
+        <div class="portfolio-cards">
+          <div class="portfolio-card">
+            <img src="styles/images/pic02.jpg"/><p>Ipsum Feugiat</p>
+          </div>
+          <div class="portfolio-card">
+            <img src="styles/images/pic03.jpg"/><p>Rhoncus Semper</p>
+          </div>
+        </div>
+        <div class="portfolio-cards">
+          <div class="portfolio-card">
+            <img src="styles/images/pic04.jpg"/><p>Magna Nullam</p>
+          </div>
+        </div>
+        <div class="portfolio-cards">
+          <div class="portfolio-card">
+            <img src="styles/images/pic05.jpg"/><p>Dolor Penatibus</p>
+          </div>
+          <div class="portfolio-card">
+            <img src="styles/images/pic06.jpg"/><p>Orci Convallis</p>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="content about-me" id="about-me">
       <header class="content-header">
         About Me
       </header>
     </div>
-
-
-
-
-
     <div class="content contact" id="contact">
       <header class="content-header">
         Contact
@@ -107,23 +133,14 @@
            sem nunc orci ridiculus faucibus a consectetur. Porttitor
            curae mauris urna mi dolor.
       </div>
-
       <div class="contact-inputs">
         <input class="contact-input" placeholder="Name"/>
         <input class="contact-input" placeholder="Email"/>
       </div>
-
       <textarea class="contact-textarea" placeholder="Message"></textarea>
       <button class="intro-button">Send Message</button>
     </div>
-
-
-
-
-
-
   </main>
 
 </body>
-
 </html>
