[yk_html-css-part-1] Create Contact section

--- a/classworks/yegor-koren/02_html_css_part_1/index.html
+++ b/classworks/yegor-koren/02_html_css_part_1/index.html
@@ -65,10 +65,10 @@
         mus. Eleifend id porttitor acc ultricies lobortis sem nunc ridiculus
         faucibus a consectetur. Porttitor curae mauris urna mi dolor</p>
       <form action="" method="get">
-        <input class="form-name" type="text" name="name" value="name">
-        <input class="form-email" type="email" name="email" value="email">
-        <input class="form-message" type="text" name="message" value="message">
-        <input class="button" type="submit" name="section1-button" value="Send Message">
+        <input class="form-name" type="text" name="name" placeholder="Name">
+        <input class="form-email" type="email" name="email" placeholder="Email">
+        <input class="form-message" type="text" name="message" placeholder="Message">
+        <input class="button" type="submit" name="section3-button" value="Send Message">
       </form>
     </section>
   </body>
