[soloniuk-nikita]02-html

--- a/classworks/nikita-solosniuk/02_html_css_part-1/index.html
+++ b/classworks/nikita-solosniuk/02_html_css_part-1/index.html
@@ -33,13 +33,20 @@
                     <span class="menu-text">Contact</span>
                 </a>
             </div>
+            <div class="social-bar">
+                <i class="fa fa-twitter social" aria-hidden="true"></i>
+                <i class="fa fa-facebook social" aria-hidden="true"></i>
+                <i class="fa fa-twitch social" aria-hidden="true"></i>
+                <i class="fa fa-youtube social" aria-hidden="true"></i>
+                <i class="fa fa-odnoklassniki social" aria-hidden="true"></i>
+            </div>
         </div>
         <div class="main">
             <div class="intro" id="intro">
                 <span class="hi-text">Hi! I'm <span class="prologue">Prologue</span>, a <span class="dotted">free</span>
                     responsive <br> site template designed by <span class="dotted">HTML5 UP.</span></span>
                 <span class="lorem-text">Ligula scelerisque justo sem accumsan diam quis vitae natoque dictum sollicitudin elementum.</span>
-                <button class="intro-button">Magna Aliquam</button>
+                <button class="button">Magna Aliquam</button>
             </div>
             <div class="portfolio" id="portfolio">
                 <span class="header-text">Portfolio</span>
@@ -110,14 +117,23 @@
             </div>
             <div class="contact" id="contact">
                 <span class="header-text">Contact</span>
-                <span class="contant-text">Тут мне снова лень писать то что написано на скрине, я
-                    просто заполняю это каким=то бессмысленным бредом. Всем добра!</span>
+                <span class="content-text">Elementum sem parturient nulla quam placerat viverra mauris non
+                    cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia donec curae mus. Eleifend
+                    id porttitor ac ultricies lobortis sem nunc orci ridiculus faucibus a consectetur.
+                    Porttitor curae mauris urna mi dolor.
+                </span>
                 <div class="inputs-row">
-                    <input class="input" placeholder="Name">
-                    <input class="input" placeholder="Email">
+                    <div class="input-wrapper input-name">
+                        <input class="input" placeholder="Name">
+                    </div>
+                    <div class="input-wrapper input-email">
+                        <input class="input" placeholder="Email">
+                    </div>
                 </div>
-                <input class="input" placeholder="Message">
-                <button>Send <del>Nudes</del> Message</button>
+                <div class="input-wrapper input-message">
+                    <textarea class="input text-area" spellcheck="false"  placeholder="Message"></textarea>
+                </div>
+                <button class="button">Send <del>Nudes</del> Message</button>
             </div>
         </div>
     </body>
