Add task solution

--- a/index.html
+++ b/index.html
@@ -1,34 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/font-awesome.min.css">
+    <link href="styles/font-awesome.min.css" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet">
 </head>
+
 <body>
     <ul>
-        <li><a href="#"><img src="styles/images/avatar.jpg"><span class="text">Jane Doe</span></a></li>
-        <li><a href="#"><span class="text">Intro</span></a></li>
-        <li><a href="#portfolio"><span class="text">Portfolio</span></a></li>
-        <li><a href="#"><span class="text">About me</span></a></li>
-        <li><a href="#"><span class="text">Contact</span></a></li>
-    </ul> 
-    <section class="row intro">
-        <article class="introText">
-            <h1>Hi! I'm Prologue, a <div class="underline">free</div> responsive site template designed by <div class="underline">HTML5 UP</div>.</h1>
-
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, dolor. Cumque eum nesciunt pariatur alias, eaque, iusto rerum doloribus expedita at accusantium similique dolorem et voluptatem, magnam explicabo omnis ea.</h3>
+        <li>
+            <a href="#">
+                <img src="styles/images/avatar.jpg">
+                <span class="menu-text">Jane Doe</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="menu-text">Intro</span>
+            </a>
+        </li>
+        <li>
+            <a href="#portfolio">
+                <span class="menu-text">Portfolio</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="menu-text">About me</span>
+            </a>
+        </li>
+        <li>
+            <a href="#contact">
+                <span class="menu-text">Contact</span>
+            </a>
+        </li>
+    </ul>
+    <section class="row intro-background">
+        <article class="intro-text">
+            <h1>Hi! I'm Prologue, a
+                <span class="underline">free</span> responsive site template designed by
+                <span class="underline">HTML5 UP</span>.</h1>
+            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, dolor. Cumque eum nesciunt pariatur alias, eaque,
+                iusto rerum doloribus expedita at accusantium similique dolorem et voluptatem, magnam explicabo omnis ea.</h3>
         </article>
 
         <button class="button">Magna Aliquam</button>
     </section>
-    <section id = "portfolio">
-        <span class="portfolioText">Portfolio<br>
-        
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quibusdam dolorum dolore dolor rem aspernatur ducimus perspiciatis corrupti aperiam reprehenderit architecto quo itaque iure, earum nihil sequi dignissimos aliquam magnam?</span>
+    <section id="portfolio">
+        <div class="row">
+            <span class="caption">Portfolio</span>
+
+            <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quibusdam dolorum dolore dolor rem aspernatur ducimus
+                perspiciatis corrupti aperiam reprehenderit architecto quo itaque iure, earum nihil sequi dignissimos aliquam
+                magnam?
+            </div>
+            <div class="row-img">
+                <img src="styles/images/pic02.jpg" alt="" class="col-img">
+                <img src="styles/images/pic03.jpg" alt="" class="col-img">
+                <img src="styles/images/pic04.jpg" alt="" class="col-img">
+            </div>
+            <div class="row-img">
+                <img src="styles/images/pic07.jpg" alt="" class="col-img">
+                <img src="styles/images/pic05.jpg" alt="" class="col-img">
+                <img src="styles/images/pic02.jpg" alt="" class="col-img">
+            </div>
+            <div class="row-img">
+                <img src="styles/images/pic05.jpg" alt="" class="col-img">
+                <img src="styles/images/pic06.jpg" alt="" class="col-img">
+                <img src="styles/images/pic04.jpg" alt="" class="col-img">
+            </div>
+    </section>
+    <section id="contact">
+        <div class="row">
+            <span class="caption">Contact</span>
+
+            <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quibusdam dolorum dolore dolor rem aspernatur ducimus
+                perspiciatis corrupti aperiam reprehenderit architecto quo itaque iure, earum nihil sequi dignissimos aliquam
+                magnam?
+            </div>
+            <div class="input-container">
+                <input placeholder="Name" class="input">
+                <input placeholder="Email" class="input input-email">
+                <input placeholder="Message" class="message-input">
+            </div>
+            <button class="button">Send message</button>
+        </div>
     </section>
 </body>
+
 </html>
