[yk_html-css-part-1 Create section Portfolio

--- a/classworks/yegor-koren/02_html_css_part_1/index.html
+++ b/classworks/yegor-koren/02_html_css_part_1/index.html
@@ -53,10 +53,55 @@
         <p>Ligula scelerisque justo sem accumsan diam quis vitae natoque dictum
           sollicitudin elementum.</p>
       <form action="" method="get">
-        <input class="button" type="button" name="section1-button" value="Magna Aliquam">
+        <input class="button" type="submit" name="section1-button" value="Magna Aliquam">
       </form>
     </section>
     <section class="section section2" id="portfolio">
+      <h1>Portfolio</h1>
+      <p>Vitae natoque dictum etiam semper magnis enim feugiat convallis
+        convallis egestas rhoncus ridiculus in quis risus amet curabitur tempor
+       orci penaribus. Tellus erat mauris ipsum fermentum etiam vivamus eget.
+       Nunc nibh morbi quis fasce hendreit lacus ridiculus.</p>
+      <div class="row">
+        <div class="column">
+          <div class="figure">
+            <img src="img/pic02.jpg">
+            <p>Ipsum Reugiat</p>
+          </div>
+        </div>
+        <div class="column">
+          <div class="figure">
+            <img src="img/pic04.jpg">
+            <p>Magna Nullam</p>
+          </div>
+        </div>
+        <div class="column">
+          <div class="figure">
+            <img src="img/pic06.jpg">
+            <p>Dolor Penatibus</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <div class="figure">
+            <img src="img/pic03.jpg">
+            <p>Reugiat Ipsum</p>
+          </div>
+        </div>
+        <div class="column">
+          <div class="figure">
+            <img src="img/pic05.jpg">
+            <p>Nullam Magna</p>
+          </div>
+        </div>
+        <div class="column">
+          <div class="figure">
+            <img src="img/pic07.jpg">
+            <p>Penatibus Dolor</p>
+          </div>
+        </div>
+      </div>
     </section>
     <section class="section section3" id="contact">
       <h1>Contact</h1>
